Make sure to not use a localized label if the value is explicitly set to the empty string.  Bug 330469, r+sr=sicking